# recommend-feature-extract

./: .gitignore  CMakeLists.txt  README.md  build.sh  extractor.code-workspace
src/application/: main.cc  mock.cpp  mock.h
src/application/outer/: com_algorithm_feature_extractorpb_model_JNIExtractor.cpp  com_algorithm_feature_extractorpb_model_JNIExtractor.h  com_shoplazza_algorithm_feature_extractorpb_model_JNIExtractor.cpp  com_shoplazza_algorithm_feature_extractorpb_model_JNIExtractor.h  outer.cpp  outer.h  so.cpp  so.h  sotest.cpp
src/application/rcmd/: collection_v10.cpp  collection_v10.h  collection_v12.cpp  collection_v12.h  collection_v23.cpp  collection_v23.h  collection_v24.cpp  collection_v24.h
src/application/recall/: click_short_series.cpp  click_short_series.h  positive_add_v1.cpp  positive_add_v1.h  positive_v1.cpp  positive_v1.h
src/application/search/: positive_search_v1.cpp  positive_search_v1.h  search_v14.cpp  search_v14.h  search_v2.cpp  search_v2.h  search_v26.cpp  search_v26.h  search_v3.cpp  search_v3.h
src/features/: cross.h  ctxitem.h  item.h  label.h  query.h  user.h
src/model/: edit_distance.h  extractor.cpp  extractor.h  five.h  jsonutil.cpp  jsonutil.h  rank_gauss.cpp  rank_gauss.h  sample.cpp  sample.h  seven.h  similarity.h  table_extractor.cpp  table_extractor.h  tfrecord.cpp  tfrecord.h  thread_pool.h  triple.h  vector.h
src/pb/: features.pb.cc  features.pb.h  features.proto  tfexample.pb.cc  tfexample.pb.h  tfexample.proto
src/tables/context/: dssm_short_click_context.h  labelcontext.cpp  labelcontext.h  labelcontext_item_hash.h  softmax_label.h
src/tables/cross/: item_ctxitem_cxr_cross.h  item_ctxitem_lda_cross.h  query_item_lda_cross.h  user_item_lda_cross.h
src/tables/ctxitem/: ctx_item_action_cnt.cpp  ctx_item_action_cnt.h  ctx_item_base_info.h  ctx_item_lda.h  ctx_item_ngram.h
src/tables/item/: item_action_cnt.cpp  item_action_cnt.h  item_base_info.h  item_ctx_item_tag_sim.h  item_event_cnt.h  item_lda.cpp  item_lda.h  item_ngram.h  item_query_sim.h  item_search_word.h
src/tables/query/: query_click_tag.h  query_lda.h  query_ngram.h  query_splits.h
src/tables/user/: user_action_series.cpp  user_action_series.h  user_action_tag_series.h  user_lda.h  user_simple_action_series.h  user_utm_info.h
